--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <form name="submit-to-google-sheet">
-  <input name="email" type="email" placeholder="Email" required>
+  <input name="message" type="message" placeholder="Message" required>
   <button type="submit">Send</button>
 </form>
 
