--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
+
 <form name="submit-to-google-sheet">
-  <input name="message" type="message" placeholder="Message" required>
-  <button type="submit">Send</button>
+  <input name="to" type="text" placeholder = "to">
+  <input name ="from" type="text" placeholder ="from">
+  <input name="message" type="text" placeholder="message" required>
+  <button type="submit" placeholder="send">Send</button>
 </form>
 
 <script>
