--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
 <form name="submit-to-google-sheet">
-  <input name="to" type="text" placeholder = "to">
-  <input name ="from" type="text" placeholder ="from">
+  <input name="to" type="text" placeholder = "to" required>
+  <input name ="from" type="text" placeholder ="from" required>
   <input name="message" type="text" placeholder="message" required>
   <button type="submit" placeholder="send">Send</button>
 </form>
