--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 
 <form name="submit-to-google-sheet">
-  <input name="to" type="text" placeholder = "to" required>
-  <input name ="from" type="text" placeholder ="from" required>
+
+  <label for="to">to:</label>
+  <select name="to" id="to">
+    <option value="Sultan">Sultan</option>
+    <option value="Charlotte">Charlotte</option>
+</select>
+
+      <label for="from">from:</label>
+      <select name="from" id="from">
+        <option value="Charlotte">Charlotte</option>
+        <option value="Sultan">Sultan</option>
+        </select>
+
+
   <input name="message" type="text" placeholder="message" required>
   <button type="submit" placeholder="send">Send</button>
 </form>
