--- a/default.html
+++ b/default.html
@@ -2,6 +2,33 @@
 <html lang="en">
   <head>
 
+    <script type="text/javascript">
+// PASSWORD PROTECTION SCRIPT
+
+function TheLogin() {
+
+var password = 'pepper';
+
+if (this.document.login.pass.value == password) {
+  top.location.href="index.html";
+}
+else {
+  window.alert("Nice Try, Loser");
+  }
+}
+
+</script>
+
+
+<div class="password" style="text-align: center; margin: 0 auto; color: #0000FF; font: normal 13px arial, sans-serif;">
+password?:<br>
+<form name="login" style="margin: 5px 0px 0px 0px;">
+<input type="text" name="pass" size="17" onkeydown="if(event.keyCode==13) event.keyCode=9;" style="width: 130px;"><br>
+<input type="button" value="Click to Login" style="width: 134px; margin: 4px auto 4px auto;" onclick="javascript:TheLogin(this.form)">
+</form>
+</div>
+
+
   What do you want to say today?
   <br>
 <form name="submit-to-google-sheet">
