--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 function TheLogin() {
 
-var password = 'pepper';
+var password = 'David Brooks';
 
 if (this.document.login.pass.value == password) {
   top.location.href="index2.html";
