--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 function TheLogin() {
 
-var password = 'David Brooks';
+var password = 'Devin Booker';
 
 if (this.document.login.pass.value == password) {
   top.location.href="index2.html";
