--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
 
 
 
-  <input name="message" type="text" placeholder="message" required>
+  <input id = "messagebox" name="message" type="text" placeholder="message" required>
 
 
   <button type="submit" placeholder="send">Send</button>
