--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>Just Between Us</title>
 
-  What do you want to say today?
+  <div id="header"> What do you want to say today? </div>
+    
   <br>
 <form name="submit-to-google-sheet">
 
