--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <title>Just Between Us</title>
 
   <div id="header"> What do you want to say today? </div>
-    
+
   <br>
 <form name="submit-to-google-sheet">
 
@@ -19,6 +19,7 @@
     <option value="Charlotte">Charlotte</option>
 </select>
 
+
       <label for="from" required>from:</label>
       <select name="from" id="from">
         <option value="Charlotte">Charlotte</option>
@@ -26,12 +27,14 @@
         </select>
 
 
-
+<br> <br>
+<div id="textarea">
   <textarea id = "messagebox" name="message" type="text" placeholder="message" required> </textarea>
 
 
-  <button type="submit" placeholder="send">Send</button>
+  <button type="submit" placeholder="send" id="button">Send</button>
 </form>
+</div>
 
 </p>
 </body>
