--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,9 @@
 
   <div id="header"> What do you want to say today? </div>
 
+<div id="box-container">
   <br>
+  <div id="select">
 <form name="submit-to-google-sheet">
 
 
@@ -25,17 +27,17 @@
         <option value="Charlotte">Charlotte</option>
         <option value="Sultan">Sultan</option>
         </select>
+      </div>
 
 
-<br> <br>
-<div id="textarea">
+<div class="textarea">
   <textarea id = "messagebox" name="message" type="text" placeholder="message" required> </textarea>
 
 
   <button type="submit" placeholder="send" id="button">Send</button>
 </form>
 </div>
-
+</div>
 </p>
 </body>
 
