--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
       </div>
 
 
-<div class="textarea">
+<div id="textarea">
   <textarea id = "messagebox" name="message" type="text" placeholder="message" required> </textarea>
 
 
