--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
   <textarea id = "messagebox" name="message" type="text" placeholder="message" required> </textarea>
 
 
-  <button type="submit" placeholder="send" id="button">Send</button>
+  <button type="submit" placeholder="send" id="button"><i>Send</i></button>
 </form>
 </div>
 </div>
