--- a/index2.html
+++ b/index2.html
@@ -6,11 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
-    <script>
-        function fun(){
-            document.getElementById('messagebox').value='';
-            }
-    </script>
+
 
     <title>Just Between Us</title>
 
@@ -40,7 +36,7 @@
   <textarea id = "messagebox" name="message" type="text" placeholder="message" required> </textarea>
 
 
-  <button type="submit" placeholder="send" id="button" onclick="fun()"><i>Send</i></button>
+  <button type="submit" placeholder="send" id="button" onclick="myfun"><i>Send</i></button>
 
 </form>
 
