--- a/index2.html
+++ b/index2.html
@@ -5,31 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Supermercado+One" rel="stylesheet">
     <link rel="stylesheet" href="stylesheet.css">
 
 
     <title>Just Between Us</title>
 
-  <div font-family: 'Amagro'; id="header"> What do you want to say today? </div>
+  <div id="header"> <i>What do you want to say today?</i> </div>
 </head>
 <body>
 <div id="boxcontainer">
 <div id="select">
+  <div class="left">
 
 <form id="submit-to-google-sheet">
   <label for="to" required>to:</label>
   <select name="to" id="to">
     <option value="Sultan">Sultan</option>
+
+
     <option value="Charlotte">Charlotte</option>
   </select>
-
+</div>
+<br>
+<div class="right">
   <label for="from" required>from:</label>
   <select name="from" id="from">
     <option value="Charlotte">Charlotte</option>
     <option value="Sultan">Sultan</option>
   </select>
+  </div>
       </div>
-
+</body>
 <div id="message">
   <textarea id = "messagebox" name="message" type="text" placeholder="message" required> </textarea>
   <button type="submit" placeholder="send" id="button"><i>Send</i></button>
@@ -38,7 +45,7 @@
 </script>
 </div>
 </div>
-</body>
+
 
 <script>
   const scriptURL = 'https://script.google.com/macros/s/AKfycbxiMOCb-umWbglzukTCQSL2NdPuAM-TaYyUK8ukn-8NkjW1rmu7/exec'
