--- a/index2.html
+++ b/index2.html
@@ -45,9 +45,7 @@
 
 </script>
 </div>
-<a href="https://docs.google.com/spreadsheets/d/14K8Wk6FDRdBJLYA86l1tPgMzBzerKIPOpb675_BYEyU/edit#gid=0">
-<img class="butterfly" src="butterfly2.png">
-</a>
+<a href="https://docs.google.com/spreadsheets/d/14K8Wk6FDRdBJLYA86l1tPgMzBzerKIPOpb675_BYEyU/edit#gid=0"><img class="butterfly" src="butterfly2.png"></a>
 
 </div>
 </body>
