--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Supermercado+One" rel="stylesheet">
     <link rel="stylesheet" href="stylesheet.css">
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous">
+    </script>
+    <script language="JavaScript" src="main.js"></script>
+
 
 
     <title>Just Between Us</title>
@@ -14,10 +21,10 @@
 
 
 <div class="grid-container">
-  <div id="header"> What do you want to say today?</div>
+  <div id="header"> <p id="header_p">What do you want to say today?</p></div>
 </head>
 <body>
-<div class="grid-child left">
+<div class="grid-child-left">
 
 <form id="submit-to-google-sheet">
   <label for="to" required>to:</label>
